removes debug background, fix text vertical alignment issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@ main.container {
   align-items: center;
   min-height: 100dvh;
   width: calc(100% - 128px);
-  background: #ffffff10;
+  /* background: #ffffff10; */
 }
 
 @media screen and (min-width: 1328px) {
